k8s/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
